# total-support

./: .gitignore  README.md
backend/: .env.example  .gitignore  ARCHITECTURE.md  DBA_HANDOFF.md  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_grant_initial_schema.py  002_grant_seed_domains_keywords.py  003_grant_relevance.py  004_grant_evaluation_failed.py
backend/scripts/: check_db.py  l5_scenario.py  list_databases.py  reset_collection_data.py  run_stack.ps1  seed_more_postings.py  smoke_bizinfo.py  sync_dev_to_prod.py  verify_schema.py
backend/src/total_support/: __init__.py  config.py
backend/src/total_support/api/: __init__.py  collection.py  deps.py  domains.py  guidelines.py  keywords.py  logs.py  main.py  postings.py  schemas.py
backend/src/total_support/db/: __init__.py  engine.py  enums.py  models.py  tz.py
backend/src/total_support/jobs/: __init__.py  celery_app.py  inproc.py  tasks.py
backend/src/total_support/observability/: __init__.py  logger.py  slack.py
backend/src/total_support/parsers/: __init__.py  period.py  sanitize.py
backend/src/total_support/scrapers/: __init__.py  base.py  bizinfo.py  iris.py  sba.py
backend/src/total_support/screening/: __init__.py  backfill.py  matcher.py
backend/src/total_support/services/: __init__.py  domains.py  evaluator.py  exceptions.py  guidelines.py  keywords.py  logs.py  postings.py
backend/tests/: conftest.py  test_api_domains.py  test_api_integration.py  test_api_keywords.py  test_api_logs.py  test_api_postings.py  test_bizinfo_parsing.py  test_body_selector.py  test_detail_body_trim.py  test_enums.py  test_evaluator.py  test_guidelines.py  test_iris_parsing.py  test_l3_integration.py  test_period.py  test_posting_filters.py  test_sanitize.py  test_sba_parsing.py  test_screening.py  test_services.py
docs/: 임원보고_지원사업통합대시보드_MVP완료.md
total_support_ui/: api-client.js  app.jsx  health-panel.jsx  hooks.jsx  index.html  mockdata.js  styles.css  tabs-keywords.jsx  tabs-monitoring.jsx  tabs-postings.jsx  ui-kit.jsx
(+9 files in other folders)
